# ra2-remixer

./: Cargo.toml  readme.md
projects/ra2-mix/: Cargo.toml  readme.md
projects/ra2-mix/examples/: basic.rs  decompress.rs  encrypted.rs  extract.rs
projects/ra2-mix/src/: checksum.rs  constants.rs  crypto.rs  lib.rs  reader.rs  writer.rs  xcc_package.rs
projects/ra2-mix/src/errors/: convert.rs  display.rs  mod.rs
projects/ra2-mix/src/names_db/: mod.rs
projects/ra2-mix/src/xcc_package/: mod.rs  reader.rs  writer.rs
projects/ra2-mix/tests/: basic_test.rs
projects/ra2-pal/: Cargo.toml
projects/ra2-pal/examples/: basic.rs
projects/ra2-pal/src/: lib.rs
projects/ra2-pal/src/colors/: mod.rs
projects/ra2-pal/tests/: main.rs
projects/ra2-pcx/: Cargo.toml
projects/ra2-pcx/examples/: basic.rs
projects/ra2-pcx/src/reader/: mod.rs
projects/ra2-shp/: Cargo.toml  package.json
projects/ra2-shp/examples/: animated.rs  basic.rs  encrypted.rs  extract.rs  same_pal.rs
projects/ra2-shp/src/: lib.rs
projects/ra2-shp/src/frames/: mod.rs
projects/ra2-shp/src/reader/: mod.rs
projects/ra2-shp/tests/: main.rs
projects/ra2-types/: Cargo.toml
projects/ra2-types/src/: lib.rs
projects/ra2-types/src/errors/: display.rs  for_apng.rs  from_image.rs  from_toml.rs  mod.rs
projects/ra2-types/src/games/: mod.rs
