[package]
name = "ra2-mix"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Red Alert 2 MIX file format library for reading and writing MIX archives"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/ra2-remixer"
repository = "https://github.com/oovm/ra2-remixer"
documentation = "https://docs.rs/ra2-mix"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
crc32fast = "1.3"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
blowfish = "0.9"
rsa = "0.9"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.8"


[features]
default = []
serde_json = ["dep:serde", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
