[package]
name = "ra2-pal"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Parser for Red Alert 2 palette files (*.pal)"
categories = ["game-development"]
homepage = "https://github.com/rust-alert/ra2-remixer/tree/dev/projects/ra2-mix"
repository = "https://github.com/rust-alert/ra2-remixer"
documentation = "https://docs.rs/ra2-mix"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25"}

[dependencies.ra2-types]
version = "0.0.1"
path = "../ra2-types"

[dev-dependencies]
tempfile = "3.8"


[features]
default = []

[package.metadata.docs.rs]
all-features = true
