[package]
name = "ra2-shp"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "Parser for Red Alert 2 shape files (*.shp)"
categories = ["game-development"]
homepage = "https://github.com/rust-alert/ra2-remixer/tree/dev/projects/ra2-shp"
repository = "https://github.com/rust-alert/ra2-remixer"
documentation = "https://docs.rs/ra2-mix"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = { version = "1" }
tracing = { version = "0" }

[dependencies.ra2-pal]
version = "0.0.2"
path = "../ra2-pal"

[dependencies.ra2-types]
version = "0.0.3"
path = "../ra2-types"
features = ["image", "apng", "walkdir"]

[dev-dependencies]
tempfile = "3.8"


[features]
default = []

[package.metadata.docs.rs]
all-features = true
