[package]
name = "ra2-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared types definitions for Red Alert 2"
categories = ["rust-patterns"]
homepage = "https://github.com/rust-alert/ra2-remixer/tree/dev/projects/ra2-mix"
repository = "https://github.com/rust-alert/ra2-remixer"
documentation = "https://docs.rs/ra2-mix"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde_json = { version = "1.0.140", optional = true }
image = { version = "0.25.6", optional = true}

[dev-dependencies]


[features]
default = []

[package.metadata.docs.rs]
all-features = true
